--- a/sample/package.json
+++ b/sample/package.json
@@ -18,7 +18,7 @@
     "express": "^4.14.0",
     "express-session": "^1.14.2",
     "intuit-oauth": "^3.0.1",
-    "ngrok": "^3.2.5",
+    "mongoose": "^5.12.3",
     "path": "^0.12.7"
   },
   "devDependencies": {
